Added beter train data view to front-end, also added nu.nl newsfeed

--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,11 @@
 		</div>
 		<div class="center-ver center-hor">Melding</div>
 		<div class="lower-third center-hor"><div class="compliment light">Complimentje</div></div>
-		<div class="bottom center-hor">Nieuwsfeed</div>
+		<div class="bottom center-hor"><div class="news_heading"></div></div>
     	<script>
     	getTrainData(); setInterval(getTrainData, 1000 * 60 * 10);
     	getDateTime(); setInterval(getDateTime, 1000);
+    	getNewsData(); setInterval(getNewsData, 1000 * 15);
     	</script>
     </body>
 </html>
