--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,14 @@
 				<div class="time_only"></div>
 			</div>
 			<div class="travel_data"></div>
+			<div class="traffic_data"></div>
 		</div>
 		<div class="center-ver center-hor">Melding</div>
 		<div class="lower-third center-hor"><div class="compliment light">Complimentje</div></div>
 		<div class="bottom center-hor"><div class="news_heading"></div></div>
     	<script>
     	getTrainData(); setInterval(getTrainData, 1000 * 60 * 10);
+		GetTrafficData(); setInterval(GetTrafficData, 1000 * 30);
     	getDateTime(); setInterval(getDateTime, 1000);
     	getNewsData(); setInterval(getNewsData, 1000 * 15);
     	</script>
